--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,15 @@
-p.first {
+p.flashy{
 
-  color: purple;
+  color: red;
   font-style: italic;
   font-family: inherit;
+  
 }
-p.Mid {
+p.best {
   color: pink;
   font-style:normal;
   font-family: sans-serif;
+  font-size: 75%;
 }
 
 p.last {
