--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,10 @@
 p.flashy{
-
   color: red;
   font-style: italic;
-  font-family: inherit;
-  
+
+
 }
-p.best {
+.best {
   color: pink;
   font-style:normal;
   font-family: sans-serif;
